--- a/docs/compliance.adoc
+++ b/docs/compliance.adoc
@@ -21,7 +21,7 @@ With trusted images and safe configurations established, identity becomes the ne
 
 == 4. Network Segmentation & Traffic Governance
 
-Workload identity is not enough; the network must enforce boundaries. NetworkPolicy provides the foundation: namespaces default to deny-all ingress and deny-all egress, and only required connections are explicitly allowed. When Multus or User-Defined Networks are used, each attachment becomes its own network zone with its own access rules. Service Mesh can add encrypted and authenticated service-to-service communication when needed. Segmentation becomes explicit, documented, and testable—exactly what compliance frameworks expect when assessing lateral-movement risk.
+The network must enforce boundaries. By default, OpenShift allows unrestricted traffic between all pods. NetworkPolicy is the primary tool to restrict this, allowing teams to implement a "default deny" posture where only necessary connections are permitted. To ensure consistent governance across the cluster, AdminNetworkPolicy allows security teams to enforce mandatory rules that developers cannot override, while BaselineAdminNetworkPolicy provides a default fallback for any traffic not explicitly handled. Segmentation becomes explicit, documented, and testable—exactly what compliance frameworks expect when assessing lateral-movement risk.
 
 == 5. Resource Governance & Availability Control
 
