--- a/docs/rhacs-internal-entities.adoc
+++ b/docs/rhacs-internal-entities.adoc
@@ -49,3 +49,40 @@ Even though these components are fundamental to the cluster, RHACS classifies th
 2. **Network Location**: They reside within the internal network (using private RFC 1918 IPs).
 
 Understanding this distinction is important when analyzing network graphs and policy violations, as traffic to and from these core components will appear as connections to "Internal Entities" rather than standard deployment-to-deployment traffic.
+
+== Example: Accessing the Kubernetes API
+
+A practical example of this behavior is observed when pods communicate with the Kubernetes API server. In every OpenShift cluster, there is a default service named `kubernetes` in the `default` namespace that provides a stable entry point for the API.
+
+[source,bash]
+----
+oc describe service kubernetes -n default
+----
+
+.Sample Output
+[source,yaml]
+----
+Name:                     kubernetes
+Namespace:                default
+Labels:                   component=apiserver
+                          provider=kubernetes
+Annotations:              <none>
+Selector:                 <none>
+Type:                     ClusterIP
+IP Family Policy:         SingleStack
+IP Families:              IPv4
+IP:                       172.30.0.1
+IPs:                      172.30.0.1
+Port:                     https  443/TCP
+TargetPort:               6443/TCP
+Endpoints:                192.168.50.10:6443,192.168.50.11:6443,192.168.50.12:6443
+Session Affinity:         None
+Internal Traffic Policy:  Cluster
+Events:                   <none>
+----
+
+Notice the **Endpoints** field: `192.168.50.10:6443, 192.168.50.11:6443, ...`. These IP addresses correspond to the control plane nodes where the `kube-apiserver` static pods are running.
+
+When a pod in your cluster (e.g., an Operator or a custom controller) makes a request to the Kubernetes API, the traffic is routed to one of these endpoints. Since these endpoints are hosted by static pods (which are not managed by a Deployment) and use private IPs, RHACS identifies the destination as an **Internal Entity**.
+
+This is why you might see connections from your workloads to "Internal Entities" in the Network Graph, representing legitimate communication with the Kubernetes control plane.
